--- a/templates/feedback.mustache
+++ b/templates/feedback.mustache
@@ -15,9 +15,11 @@
   <button style="width:50%;float:left;" id="wordcards-try-again" class="btn btn-danger btn-lg">
     <i class="fa fa-refresh"></i> {{#str}}try_again, mod_wordcards{{/str}}
   </button>
-
-  <button style="width:50%;float:left;" id='wordcards-close-results' class='btn btn-primary btn-lg'>
-    {{#str}}done, mod_wordcards{{/str}} <i class='fa fa-arrow-right'></i>
-  </button>
+    {{#nexturl}}
+        {{! In free mode we wont have a next URL so dont need this button }}
+      <button style="width:50%;float:left;" id='wordcards-close-results' class='btn btn-primary btn-lg'>
+        {{#str}}done, mod_wordcards{{/str}} <i class='fa fa-arrow-right'></i>
+      </button>
+    {{/nexturl}}
 
 </div>
