--- a/styles.css
+++ b/styles.css
@@ -735,7 +735,6 @@
 
 #try-again-or-next {
     height: 48px;
-    border: 1px solid black;
     margin-bottom: 50px;
 }
 
@@ -1000,21 +999,32 @@ ul.definition_flashcards_ul {
     margin: 20px;
     padding: 10px;
 }
-
-.wordcards-my-words-action.btn.btn-primary,
-.wordcards-my-words-action.btn.btn-outline-primary {
+a.wordcards-my-words-action.btn-outline-primary i.fa-check,
+a.wordcards-my-words-action.disabled i.fa-check {
+    /*If the btn-outline-primary class is applied so the button is in the "Add" state (show plus icon only). */
+    display: none;
+}
+a.wordcards-my-words-action.btn-primary i.fa-plus,
+a.wordcards-my-words-action.disabled i.fa-plus {
+    /*In this case the btn-outline-primary class is applied so the button is in the "Remove" state (show check icon only). */
+    display: none;
+}
+a.wordcards-my-words-action i.fa-spinner {
+    display: none;
+}
+a.wordcards-my-words-action.disabled i.fa-spinner{
+    display: inline-block;
+}
+.btn.wordcards-my-words-action {
     font-weight: normal;
     font-size: 0.7em;
-    position: absolute;
-    top: 2px;
-    right: 20px;
-    padding: 1px 5px 1px 5px;
+    padding: 0 5px 0 5px;
     border-radius: 3px;
+    margin-left: 5px;
 }
-.wordcards-my-words .saved-notification {
-    position: absolute;
-    top: 2px;
-    right: 60px;
-    font-weight: normal;
-    color: gray;
+.mod_wordcards_freemode #results-inner .wordcards-my-words-action.btn.btn-primary,
+.mod_wordcards_freemode #results-inner .wordcards-my-words-action.btn.btn-outline-primary {
+    bottom: 10px;
+    right: 10px;
+    top: inherit;
 }
