--- a/templates/student_navigation.mustache
+++ b/templates/student_navigation.mustache
@@ -37,4 +37,8 @@
             </div>
         {{/inactive}}
     {{/tabs}}
+    <a href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{cmid}}" class="btn btn-primary pull-right">
+        <i class='fa fa-random mr-1'></i>
+        {{#str}}freemode, mod_wordcards{{/str}}
+    </a>
 </div>
