--- a/templates/freemode.mustache
+++ b/templates/freemode.mustache
@@ -64,28 +64,24 @@
                     </form>
                 {{/showselectmenu}}
             </div>
-            <div class="mt-3">
-                <a href="{{config.wwwroot}}/mod/wordcards/view.php?id={{id}}" id="exit-btn">
-                    <i class="icon fa fa-sign-out fa-fw " aria-hidden="true"></i><span>{{{title}}}</span>
-                    {{#str}}exitfreemode, mod_wordcards{{/str}}
-                </a>
-            </div>
+            <div id="spacer-div" style="height: 180px;"></div>
+            <a href="{{config.wwwroot}}/mod/wordcards/view.php?id={{id}}" id="exit-btn">
+                <i class="icon fa fa-sign-out fa-fw " aria-hidden="true"></i><span>{{{title}}}</span>
+                {{#str}}exitfreemode, mod_wordcards{{/str}}
+            </a>
         </div>
         <div class="col-md-9">
-            {{#mainhtml}}
+            {{^isintropage}}
                 <div>{{{intro}}}</div>
                 <div>{{{mainhtml}}}</div>
-            {{/mainhtml}}
-            {{^mainhtml}}
-                <div class="mt-3 mod_wordcards_activity_header">
-                    <h3>{{#str}}freemode, mod_wordcards{{/str}}</h3>
-                    <div class="mt-3 mod_wordcards_instructions">
-                        {{#freemodeintrostrings}}
-                            <p>{{.}}</p>
-                        {{/freemodeintrostrings}}
-                    </div>
+            {{/isintropage}}
+            {{#isintropage}}
+                <div class="mt-3">
+                    {{#definitions}}
+                        {{>mod_wordcards/definitions_page}}
+                    {{/definitions}}
                 </div>
-            {{/mainhtml}}
+            {{/isintropage}}
         </div>
     </div>
     {{!  Add the ids of all terms in my words pool to the page markup so that JS can see them. }}
