--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -18,6 +18,16 @@
         {{/introstrings}}
     </div>
 </div>
+<div class="text-right mt-2">
+        <span class="wordcards_display_options">
+            <button class="wordcards_display_option event_grid btn btn-primary" id="btn" title="{{#str}}grid, mod_wordcards{{/str}}">
+                <i class="fa fa-th"></i>
+            </button>
+            <button class="wordcards_display_option event_flashcards btn btn-outline-primary" title="{{#str}}flashcards, mod_wordcards{{/str}}">
+                <i class="fa fa-clone"></i>
+            </button>
+        </span>
+</div>
 <div id="definitions-page-{{uniqid}}" class="definitions-container">
     <div class="mt-3">
     <div class="terms clearfix definition_grid">
@@ -70,6 +80,7 @@
                       <div class="term-wrapper {{#image}}add_wraper_handle_im{{/image}} {{^image}}add_wraper_handle{{/image}}">
                          <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
                             <div class="term-header">
+                                {{>mod_wordcards/my_words_button}}
                                <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
                                {{#model_sentence}}
                                <div class="term-modelsentence">
