--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -11,6 +11,14 @@
 }}
 {{{optshtml}}}
 <div class="mt-3 mod_wordcards_activity_header">
+    {{#freemodeavailable}}
+        {{^isfreemode}}
+            <a href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{cmid}}" class="btn btn-outline-primary pull-right">
+                <i class='fa fa-random mr-1'></i>
+                {{#str}}freemode, mod_wordcards{{/str}}
+            </a>
+        {{/isfreemode}}
+    {{/freemodeavailable}}
     <h3>{{{introheading}}}</h3>
     <div class="mod_wordcards_instructions">
         {{#introstrings}}
