--- a/templates/student_navigation.mustache
+++ b/templates/student_navigation.mustache
@@ -37,8 +37,11 @@
             </div>
         {{/inactive}}
     {{/tabs}}
-    <a href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{cmid}}" class="btn btn-primary pull-right">
-        <i class='fa fa-random mr-1'></i>
-        {{#str}}freemode, mod_wordcards{{/str}}
-    </a>
+    {{#freemodeavailable}}
+        <a href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{cmid}}" class="btn btn-primary pull-right">
+            <i class='fa fa-random mr-1'></i>
+            {{#str}}freemode, mod_wordcards{{/str}}
+        </a>
+    {{/freemodeavailable}}
+
 </div>
