--- a/templates/freemode.mustache
+++ b/templates/freemode.mustache
@@ -4,7 +4,7 @@
             <div class="mt-3">
                 <div class="nav flex-column nav-pills mb-3" id="pills-practice-type">
                     <a class="nav-link{{#introactive}} active{{/introactive}}" id="pill-practice-type-intro"
-                       href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{id}}">
+                       href="{{{defsurl}}}">
                         <i class="icon fa fa-map-signs fa-fw " aria-hidden="true"></i>
                         <span>{{#str}}introduction, mod_wordcards{{/str}}</span>
                     </a>
