--- a/templates/freemode.mustache
+++ b/templates/freemode.mustache
@@ -65,10 +65,12 @@
                 {{/showselectmenu}}
             </div>
             <div id="spacer-div" style="height: 180px;"></div>
-            <a href="{{config.wwwroot}}/mod/wordcards/view.php?id={{id}}" id="exit-btn">
-                <i class="icon fa fa-sign-out fa-fw " aria-hidden="true"></i><span>{{{title}}}</span>
-                {{#str}}exitfreemode, mod_wordcards{{/str}}
-            </a>
+            {{#stepsmodeavailable}}
+                <a href="{{config.wwwroot}}/mod/wordcards/view.php?id={{id}}" id="exit-btn">
+                    <i class="icon fa fa-sign-out fa-fw " aria-hidden="true"></i><span>{{{title}}}</span>
+                    {{#str}}exitfreemode, mod_wordcards{{/str}}
+                </a>
+            {{/stepsmodeavailable}}
         </div>
         <div class="col-md-9">
             {{^isintropage}}
