fixed issue on new attempts with a regular user

--- a/templates/scatter_page.mustache
+++ b/templates/scatter_page.mustache
@@ -12,19 +12,18 @@
 </div>
 
 {{#js}}
-    require(['jquery', 'mod_wordcards/cards', './amd/src/easytimer.js'], function($, Cards, Timer) {
-        var container = $('#cards-page-{{uniqid}}'),
-            modid = {{modid}},
-            canmanage = {{canmanage}},
-            cards = container.find('.wordcards'),
-            btn = container.find('.wordcards-continue-button'),
-            timer = new Timer();
+    require(['jquery', 'mod_wordcards/cards'], function($, Cards) {
+        var container = $('#cards-page-{{uniqid}}');
+        var    modid = {{modid}};
+        var    canmanage = {{canmanage}};
+        var    cards = container.find('.wordcards');
+        var    btn = container.find('.wordcards-continue-button');
+
 
         var inst = new Cards(cards, {{{definitionsjson}}});
 
         function displayfinishmessage() {
 
-            $('.wordcards_timer_time').text(timer.getTimeValues().toString(['minutes', 'seconds', 'secondTenths']));
             $('.wordcards_timer').css('display', 'none');
             container.find('.congrats').css('display', 'block');
         }
@@ -45,13 +44,13 @@
 
                 {{#completeafterlocal}}
                     var redirecturl = "{{{nexturl}}}";
-                    window.location.replace(redirecturl.replace(/&amp;/g,'&') + "&localscattertime=" +  timer.getTotalTimeValues().seconds);
+                    window.location.replace(redirecturl.replace(/&amp;/g,'&') + "&localscattertime=1");
                     return;
                 {{/completeafterlocal}}
 
                 {{#isglobalscatter}}
                     var redirecturl = "{{{nexturl}}}";
-                    window.location.replace(redirecturl.replace(/&amp;/g,'&') + "&globalscattertime=" + timer.getTotalTimeValues().seconds);
+                    window.location.replace(redirecturl.replace(/&amp;/g,'&') + "&globalscattertime=" + 1);
                     return;
                 {{/isglobalscatter}}
 
@@ -59,7 +58,6 @@
 
                 displayfinishmessage();
 
-                timer.stop();
 
             });
         {{/hascontinue}}
@@ -67,21 +65,13 @@
         {{#isglobalcompleted}}
             inst.on('complete', function() {
                 displayfinishmessage();
-                timer.stop();
+
             });
         {{/isglobalcompleted}}
 
         // Move the wordcards on top of screen.
         $(window).scrollTop($('#wordcards').offset().top - 45);
 
-        // Set timer.
-        $('.wordcards_timer').css('display', 'block');
-        timer.start({precision: 'secondTenths', callback: function (values) {
-            $('.wordcards_timer').html(values.toString(['minutes', 'seconds', 'secondTenths']));
-        }});
-        timer.addEventListener('secondsUpdated', function (e) {
-            $('.wordcards_timer .values').html(timer.getTimeValues().toString(['minutes', 'seconds', 'secondTenths']));
-        });
     });
 
 {{/js}}
