added support for multi-lang filter in the definitions field

--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -63,7 +63,7 @@
                 {{/model_sentence}}
              </div>
              <div class="term-body">
-                {{definition}}
+                {{{definition}}}
              </div>
           </div>
        </div>
@@ -94,7 +94,7 @@
                                {{/model_sentence}}
                             </div>
                             <div class="term-body">
-                               {{definition}}
+                                {{{definition}}}
                             </div>
                          </div>
                       </div>
