--- a/templates/feedback_details.mustache
+++ b/templates/feedback_details.mustache
@@ -17,7 +17,7 @@
       </div>
 
       <div class="term-body">
-        <span>{{question}}</span>
+        <span>{{{question}}}</span>
           {{>mod_wordcards/my_words_button}}
       </div>
     </div>
