--- a/templates/vocablist.mustache
+++ b/templates/vocablist.mustache
@@ -13,7 +13,7 @@
     {{#frontfacedef}}
       <div {{#showimageflip}}style="background-image: url('{{image}}'); background-repeat: no-repeat; background-position: center;"{{/showimageflip}}
               class="wordcards_defcard front">
-        {{definition}}
+          {{{definition}}}
       </div>
         <div class="wordcards_termcard back">
             <button class="play-tts btn btn-secondary btn-sm" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}">
@@ -31,7 +31,7 @@
       </div>
       <div {{#showimageflip}}style="background-image: url('{{image}}'); background-repeat: no-repeat; background-position: center;"{{/showimageflip}}
            class="wordcards_defcard back">
-          {{definition}}
+          {{{definition}}}
       </div>
 
   {{/frontfacedef}}
